--- a/SocialCommunity/SocialCommunity/IOSClient/MainUI/SCMessage/SCMessage.storyboard
+++ b/SocialCommunity/SocialCommunity/IOSClient/MainUI/SCMessage/SCMessage.storyboard
@@ -18,9 +18,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SVc-4W-LYZ">
-                                <rect key="frame" x="168" y="408.66666666666669" width="57" height="35"/>
+                                <rect key="frame" x="149" y="408.66666666666669" width="95.333333333333314" height="35"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Msg"/>
+                                <buttonConfiguration key="configuration" style="plain" title="MsgPage"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
