--- a/SocialCommunity/SocialCommunity/IOSClient/MainUI/SCFile/SCFile.storyboard
+++ b/SocialCommunity/SocialCommunity/IOSClient/MainUI/SCFile/SCFile.storyboard
@@ -12,12 +12,24 @@
         <!--File-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="SCFile" id="Y6W-OH-hqX" customClass="SCFile" customModule="SocialCommunity" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SCFile" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="SCFile" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FilePage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5X6-Fn-Saf">
+                                <rect key="frame" x="164.33333333333334" y="415.66666666666669" width="64.666666666666657" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5X6-Fn-Saf" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="N7m-hj-z5o"/>
+                            <constraint firstItem="5X6-Fn-Saf" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="Xdh-lH-xNo"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
