--- a/SocialCommunity/SocialCommunity/IOSClient/MainUI/SCDaily/SCDaily.storyboard
+++ b/SocialCommunity/SocialCommunity/IOSClient/MainUI/SCDaily/SCDaily.storyboard
@@ -12,7 +12,7 @@
         <!--Daily-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="SCDaily" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="SCDaily" customModule="SocialCommunity" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SCDaily" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="SCDaily" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
